# Syso

./: .env.example  .gitignore  LICENSE  PROJECT.md  README.md  implementation_plan.md  pyproject.toml  requirements.txt  test.md  voice_agent.py
agent/: main.py  registry.py  syso_agent.py  system_tools.py
app/: main.py
app/core/: audio_pipeline.py  telemetry.py  tools.py  ui_events.py  websocket_client.py
app/gui/: chat_panel.py  debug_panel.py  login_window.py  main_window.py  mic_indicator.py  settings_panel.py  system_dashboard.py  theme.py
backend/: main.py
backend/agent/: gemini.py  memory_tier2.py  memory_tier3.py  monitoring_engine.py  test_voice_config.py  tools_schema.py  voice_config.py
backend/agent/data/: voice_preferences.json
backend/router/: parser.py
backend/server/: auth.py  ws_server.py
core/: memory_tier2.py  system_ops.py
data/: .gitignore  app_settings.json  voice_preferences.json
shared/: schemas.py
terraform/: DEPLOYMENT.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: push_to_cloud.sh  startup.sh
ハロシソ_ja_linux_v4_0_0/: ハロシソ_ja_linux_v4_0_0.ppn
