[project]
name = "system-caretaker"
version = "0.1.0"
description = "System Monitoring application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Google LLC" }
]

dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi==0.110.0",
    "websockets==13.0",
    "psutil==5.9.8",
    "pyaudio==0.2.14",
    "pillow==10.2.0",
    "google-genai==1.66.0",
    "customtkinter==5.2.2",
    "pvporcupine==3.0.1",
    "msgpack==1.0.8",
    "pydantic==2.9.0",
    "uvicorn==0.27.1",
    "pystray==0.19.5",
    "pygame>=2.6.1",
    "chromadb>=1.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = ["C901", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "gemini_hack"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.build.targets.wheel.shared-data]
"agent/static" = "share/gemini_hack/static"
"agent/.env" = "share/gemini_hack/.env.template"
